# Django_shop

./: .env-dev  .env-prod  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  Описание.docx
docker/: celery.sh  entrypoint.sh
nginx/: nginx.conf
online_shop/: data.json  db.sqlite3
online_shop/api/: urls.py
online_shop/basket/: apps.py  cart.py  serializers.py  tests.py  views.py
online_shop/data_files/: tags.txt
online_shop/fixtures/: data.json
online_shop/frontend/: urls.py
online_shop/myauth/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
online_shop/myauth/migrations/: 0001_initial.py  0002_alter_profile_avatar_alter_profile_phone_number_and_more.py
online_shop/online_shop/: __init__.py  celery.py  settings.py  urls.py
online_shop/orders/: admin.py  models.py  serializers.py  tasks.py  tests.py  views.py
online_shop/orders/fixtures/: data.json
online_shop/orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_order_options_alter_orderinfobasket_options.py
online_shop/services/: payment.py  schemas.py  utils.py
online_shop/shopapp/: admin.py  apps.py  models.py  serializers.py  tests.py  utils.py  views.py
online_shop/shopapp/fixtures/: data.json
online_shop/shopapp/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_category.py  0004_product.py  0005_productimage.py  0006_review.py  0007_specification.py  0008_alter_review_rate.py  0009_alter_specification_options.py  0010_alter_product_price.py  0011_rename_description_productimage_alt_and_more.py  (+10 more)
(+15 files in other folders)
