[tool.poetry]
name = "api-online-shop"
version = "0.1.0"
description = ""
authors = ["SRubtsov <frexrub@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
django-filter = "^24.3"
pytils = "^0.4.1"
drf-spectacular = "^0.27.2"
django-debug-toolbar = "^4.4.6"
psycopg2 = "^2.9.10"
django-dump-load-utf8 = "^0.0.4"
django-redis = "^5.4.0"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
